--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-	<title>Object Detection</title>
+	<title>AI Video Surveillance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -14,20 +14,24 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body background="superhero.jpg">
-  <center>
-    <h1 class="btn btn-info heading">Object Detection</h1>
+<body background="background.jpg">
+<center>
+<h3 id="AI_video">AI Video Surveillance</h3>
+<br>
+<button id="Start" class="btn btn-success" onclick="start()">Start</button>
+<br>
+<br>
+<h3 id="number_object_detected" class="btn btn-warning"></h3>
+<br>
+<br>
+<h3 id="status" class="btn btn-danger"></h3>
+<br>
 
-     
-    <h3 id="status" class="btn btn-danger"></h3>
-    <h3 id="number_of_objects" class="btn btn-warning"></h3>
-    <button onclick="Start()" class="btn btn-danger" id="start_model">Start</button>
-    <br>
-    <br>
-<button class="btn btn-danger" id="status"></button>
-  </center>
+</center>
+<div class="footer">Developed by:Amey Sachin Kadam</div>
+<script src="main.js"></script>
 
-  <script src="main.js"></script>
 
 </body>
+
 </html>
